public_html/styles/homepage.css
/* -----------------------------------
INTERACTIVE MAP
-------------------------------------*/

div#map {
    width: 100%;
    max-width: 100%;
    min-height: 480px;
    z-index: -1000;
}

/* -----------------------------------
AIR QUALITY GRAPH
-------------------------------------*/

div#airQuality {
    min-height: 480px;
    max-width: 100%;
}

/* -----------------------------------
10 Most Livable Cities Table
-------------------------------------*/

div#mostLivableCities {
    display: grid;
    align-items: center;
    justify-items: center;
    min-height: 480px;
    padding: 1.618rem;
}

div#mostLivableCities>h3 {
    margin-top: 1.618rem;
    text-align: center;
}

div#mostLivableCities>h3>span.title {
    font-weight: bold;
    font-size: 1.618rem;
}

div#mostLivableCities>h3>span.subtitle {
    font-weight: lighter;
    font-size: 1rem;
}

table#mostLivableCitiesTable {
    font-size: 1rem;
    white-space: nowrap;
    margin-top: 1.618rem;
    margin-bottom: 1.618rem;
    padding: 1rem;
}

table#mostLivableCitiesTable th {
    font-size: 0.88rem;
    text-align: left;
}

table#mostLivableCitiesTable td, th {
    padding: 0.414rem;
    vertical-align: top;
}

/* -----------------------------------
RESPONSIVE CODE
-------------------------------------*/

/* phones (portrait) */

@media only screen and (max-width: 767px) and (orientation: portrait) {
    div#map {
        max-width: 100vw;
        min-height: 480px;
        margin-top: 2.618rem;
    }
    div#mostLivableCitiesTableContainer {
        overflow-y: scroll;
        max-width: 100vw;
    }
    div#airQuality {
        max-width: 100vw;
        margin-top: 2.618rem;
    }
}

/* phones (landscape) */

@media only screen and (max-width: 767px) and (orientation: landscape) {
    div#mostLivableCitiesTableContainer {
        overflow-y: scroll;
        max-width: 100vw;
    }
}

/* tablets (portrait) */

@media only screen and (min-width: 768px) and (max-width: 1024px) {
    div#map {
        margin-top: 2.618rem;
    }
    div#mostLivableCitiesTableContainer {
        overflow-y: scroll;
        max-width: 100vw;
    }
}

/* desktop and tablets (landscape) */

@media only screen and (min-width: 1025px) {
    div#mostLivableCitiesTableContainer {
        overflow: hidden;
        max-width: 100vw;
    }
}

